jsdialog: fixed dialog content being cut off
i.e: theme dialog(format->theme)

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -41,6 +41,11 @@
 	min-width: 400px;
 }
 
+img.ui-drawing-area {
+	width: -webkit-fill-available;
+	width: -moz-available;
+}
+
 .jsdialog.one-child-popup {
 	border: 0;
 	margin: 0 !important;
